code/human_written_tests/WebAssembly/processed_control_flow_validation/test_if_106.wast
(assert_malformed
  (module quote "(func i32.const 0 if end $l)")
  "mismatching label"
)